--- a/less/bootstrap/patterns.less
+++ b/less/bootstrap/patterns.less
@@ -426,7 +426,7 @@ a.menu:after,
 // -----------
 
 .breadcrumb {
-  margin: 0 0 @baseline;
+  margin: 0 -2px 0 0;
   padding: 7px 14px;
   #gradient > .vertical(#ffffff, #f5f5f5);
   border: 1px solid #ddd;
@@ -601,8 +601,8 @@ footer {
 button.btn,
 input[type=submit].btn {
   &::-moz-focus-inner {
-  	padding: 0;
-  	border: 0;
+    padding: 0;
+    border: 0;
   }
 }
 
