--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -36,6 +36,11 @@
 
     <!-- Scripts -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.0.6/modernizr.min.js"></script>
+    <script type="text/javascript">
+      if (window.location.hash && window.location.hash == '#_=_') {
+          window.location.hash = '';
+      }
+    </script>
     {{ content_for_header }}
 
     <!-- Fav & touch icons -->
@@ -52,7 +57,16 @@
 
         <!-- Header -->
         <header id="mast">
-            <h1><a href="{{space.permalink}}" title="link to {{space.title}} homepage">{{ space.title }}</a></h1>
+            <div class="social-nav pull-right">
+              Follow us on:
+              <a href="{{ space.twitter_link }}" class="button button--small button--twitter">
+                <img width="22" height="17" src="{{ 'icon-twitter-white.png' | image_url }}" alt="Twitter">
+              </a>
+              <a href="{{ space.facebook_link }}" class="button button--small button--facebook">
+                <img width="22" height="17" src="{{ 'icon-facebook-white.png' | image_url }}" alt="Facebook">
+              </a>
+            </div>
+            <a href="{{ space.homepage_link }}"><img src="{{ space.logo_image }}" alt="Logo" class="header-img"></a>
 
             <div class="description">
                 {{space.summary | markdown}}
@@ -73,6 +87,11 @@
             </div>
             {% endif %}
 
+            <div class="app-nav">
+              <a href="{{ space.appstore_link }}"><img src="{{ space.appstore_image }}" alt="Download Olio in the appstore" class="small"></a>
+              <a href="{{ space.playstore_link }}"><img src="{{ space.playstore_image }}" alt="Download Olio in the Google Playstore" class="small"></a>
+            </div>
+
             {% if space.expires_at %}
               <div id="timer">
                 <span class="countdown-text">you have</span>
@@ -85,16 +104,18 @@
                 <!-- Logged in user bar -->
                 <div id="user-bar">
                     <img src="{{current_user.image_url}}" alt="Avatar for {{user.nickname}}" width="28" height="28" class="avatar" />
-                    <div id="welcome-message">Hey! welcome back <strong>{{current_user.nickname}}</strong> <a href="/auth/signout">(logout)</a></div>
+                    <div id="welcome-message" class="authenticated">Hey! welcome back <strong>{{current_user.nickname}}</strong> <a href="/auth/signout">(logout)</a></div>
                 </div>
 
-                <nav id="navigation">
-                    <a title="Add new {{theme.idea_context}} to {{space.title}}" class="btn primary showbtn">+ add new {{theme.idea_context}}</a>
-                </nav>
+                  {% if current_user.nickname == 'OLIO_ex' %}
+                    <nav id="navigation">
+                        <a title="Add new {{theme.idea_context}} to {{space.title}}" class="btn primary showbtn">+ add new {{theme.idea_context}}</a>
+                    </nav>
+                  {% endif %}
                 {% else %}
                 <!-- Logged out user bar -->
                 <div id="user-bar">
-                    <div id="welcome-message">Hey stranger! login to get involved</div>
+                    <div id="welcome-message">Hey stranger! <strong>Login to vote</strong> on where to launch Olio next</div>
                 </div>
 
                 <ul class="auth">
@@ -102,9 +123,6 @@
                     <li class="facebook"><a href="/auth/facebook" class="button"><span></span>Facebook</a></li>
                 </ul>
 
-                <div class="alert-message tip login-prompt">
-                    <i></i><p>login with twitter or facebook to add new or {{theme.like_context}} {{theme.ideas_context}}</p>
-                </div>
                 {% endif %}
             </div>
         </header>
