header text back to white

--- a/assets/ideas.css
+++ b/assets/ideas.css
@@ -2555,7 +2555,7 @@ textarea {
   color: #ffffff;
 }
 #mast .description {
-  color: #444;
+  color: #fff;
   padding: 0 50px 0 50px;
 }
 #mast #user-actions {
