removed olio references from social media share buttons

--- a/ideas/show.html.liquid
+++ b/ideas/show.html.liquid
@@ -64,7 +64,7 @@
                 <div class="input"><textarea id="comment_body" name="comment[body]"></textarea></div>
                 Share this idea:
                 <a
-                  href="https://twitter.com/intent/tweet?text=I just voted to bring @OLIO_ex The Food Sharing Revolution to my neighbourhood, you should vote too! olio.rusic.com{{ space.permalink }} #foodwaste"
+                  href="https://twitter.com/intent/tweet?text={{ space.permalink }}"
                   class="button button--small button--twitter" id="twitter-share">
                   <img
                     width="22"
